manifests/media-entertainment/manifest.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
  namespace: media
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: media-entertainment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: production
      app.kubernetes.io/part-of: media-entertainment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
        app.kubernetes.io/component: server
        app.kubernetes.io/instance: production
        app.kubernetes.io/part-of: media-entertainment
      namespace: media
    spec:
      containers:
        - name: plex
          image: "docker.io/plexinc/pms-docker:latest"
          imagePullPolicy: Always
          resources:
            requests:
              memory: "4Gi"
              cpu: "1"
              ephemeral-storage: "2Gi"
            limits:
              memory: "8Gi"
              cpu: "2"
              ephemeral-storage: "4Gi"
          ports:
            # https://support.plex.tv/articles/201543147-what-network-ports-do-i-need-to-allow-through-my-firewall/
            - containerPort: 32400
              name: pms
              protocol: TCP
            - containerPort: 1900
              name: dnla-udp
              protocol: UDP
            - containerPort: 32469
              name: dnla-tcp
              protocol: TCP
            - containerPort: 3005
              name: home-theatre
              protocol: TCP
            - containerPort: 5353
              name: discovery
              protocol: TCP
            - containerPort: 8324
              name: roku
              protocol: TCP
            - containerPort: 32410
              protocol: UDP
            - containerPort: 32412
              protocol: UDP
            - containerPort: 32413
              protocol: UDP
            - containerPort: 32414
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /transcode
              name: transcode
            - mountPath: /data
              name: media
      dnsPolicy: ClusterFirst
      dnsConfig:
        nameservers:
          - 10.0.100.1
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-plex-config
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-media
        - name: transcode
          persistentVolumeClaim:
            claimName: pvc-nfs-plex-transcodes

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
        - name: transmission
          image: "docker.io/haugene/transmission-openvpn:latest"
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 2
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          volumeMounts:
            - mountPath: /data/
              name: transmission-data
          resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: transmission-data
          persistentVolumeClaim:
            claimName: pvc-nfs-downloads

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: prowlarr
          image: "lscr.io/linuxserver/prowlarr:latest"
          imagePullPolicy: Always
          resources: {}
          ports:
            - containerPort: 9696
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 9696
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-prowlarr-config

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: bazarr
          image: "lscr.io/linuxserver/bazarr:latest"
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: http
              containerPort: 6767
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: media
              mountPath: /data/media
            - name: bazarr-config
              mountPath: /config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-media
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-bazarr-config

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: sonarr
          image: "lscr.io/linuxserver/sonarr:latest"
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - curl --fail localhost:8989/api/v3/system/status?apiKey=`IFS=\>
                  && while read -d \< E C; do if [[ $E = "ApiKey" ]]; then echo
                  $C; fi; done < /config/config.xml`
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8989
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: downloads
              mountPath: /data/downloads
            - name: media
              mountPath: /data/media
            - name: sonarr-config
              mountPath: /config
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: pvc-nfs-downloads
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-media
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-sonarr-config

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: radarr
          image: "lscr.io/linuxserver/radarr:latest"
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: http
              containerPort: 7878
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /usr/bin/env
                - bash
                - -c
                - curl --fail localhost:7878/api/v3/system/status?apiKey=`IFS=\>
                  && while read -d \< E C; do if [[ $E = "ApiKey" ]]; then echo
                  $C; fi; done < /config/config.xml`
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 7878
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: downloads
              mountPath: /data/downloads
            - name: media
              mountPath: /data/media
            - name: radarr-config
              mountPath: /config
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: pvc-nfs-downloads
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-media
        - name: radarr-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-radarr-config

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: overseerr
  namespace: media
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: media-entertainment
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: production
      app.kubernetes.io/part-of: media-entertainment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
        app.kubernetes.io/component: server
        app.kubernetes.io/instance: production
        app.kubernetes.io/part-of: media-entertainment
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: overseerr
          image: "lscr.io/linuxserver/overseerr:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 5055
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - mountPath: /app/config
              name: overseerr-config
          resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: overseerr-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-overseerr-config

---
kind: Service
apiVersion: v1
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  selector:
    app: transmission
  type: ClusterIP
  ports:
    - port: 9091
      protocol: TCP
      targetPort: 9091
  sessionAffinity: None

---
kind: Service
apiVersion: v1
metadata:
  name: plex-service
  namespace: media
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: media-entertainment
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.100.241
  externalTrafficPolicy: Local
  ports:
    - name: pms
      port: 32400
      protocol: TCP
      targetPort: pms
    - name: home-theatre
      port: 3005
      protocol: TCP
      targetPort: home-theatre
    - name: discovery
      port: 5353
      protocol: TCP
      targetPort: discovery
    - name: roku
      port: 8324
      protocol: TCP
      targetPort: roku
    - name: dnla-tcp
      port: 32469
      protocol: TCP
      targetPort: dnla-tcp
    - name: dnla-udp
      port: 1900
      protocol: UDP
      targetPort: dnla-udp
    - name: gdm32410
      port: 32410
      protocol: UDP
      targetPort: 32410
    - name: gdm32412
      port: 32412
      protocol: UDP
      targetPort: 32412
    - name: gdm32413
      port: 32413
      protocol: UDP
      targetPort: 32413
    - name: gdm32414
      port: 32414
      protocol: UDP
      targetPort: 32414
  selector:
    app.kubernetes.io/name: plex
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: media-entertainment
  sessionAffinity: None

---
kind: Service
apiVersion: v1
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  selector:
    app: prowlarr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9696
      targetPort: 9696

---
kind: Service
apiVersion: v1
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  selector:
    app: bazarr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 6767
      targetPort: http

---
kind: Service
apiVersion: v1
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  selector:
    app: sonarr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8989
      targetPort: http

---
kind: Service
apiVersion: v1
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  selector:
    app: radarr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 7878
      targetPort: http

---
kind: Service
apiVersion: v1
metadata:
  name: overseerr
  namespace: media
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: media-entertainment
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: media-entertainment
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  ingressClassName: nginx-private
  rules:
    - host: transmission.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
  tls:
    - hosts:
        - transmission.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: plex-internal-ingress
  namespace: media
  labels:
    app.kubernetes.io/name: plex
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: media-entertainment
spec:
  ingressClassName: nginx-private
  rules:
    - host: plex.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: plex-service
                port:
                  number: 32400
  tls:
    - hosts:
        - plex.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prowlarr
  namespace: media
  labels:
    app: prowlarr
spec:
  ingressClassName: nginx-private
  rules:
    - host: prowlarr.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
  tls:
    - hosts:
        - prowlarr.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  ingressClassName: nginx-private
  rules:
    - host: bazarr.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
  tls:
    - hosts:
        - bazarr.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  ingressClassName: nginx-private
  rules:
    - host: sonarr.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: radarr
  namespace: media
  labels:
    app: radarr
spec:
  ingressClassName: nginx-private
  rules:
    - host: radarr.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: overseerr
  namespace: media
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: production
    app.kubernetes.io/part-of: media-entertainment
spec:
  ingressClassName: nginx-private
  rules:
    - host: overseerr.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  name: http
  tls:
    - hosts:
        - overseerr.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl
